--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -92,22 +92,26 @@ section[epub|type~="z3998:scene"] > p{
 }
 /* End play */
 
-/* Verse */
+/* Song, verse */
+[epub|type~="z3998:song"] p,
 [epub|type~="z3998:verse"] p{
 	text-align: initial;
 	text-indent: 0;
 }
 
+[epub|type~="z3998:song"] p > span,
 [epub|type~="z3998:verse"] p > span{
 	display: block;
 	padding-left: 1em;
 	text-indent: -1em;
 }
 
+[epub|type~="z3998:song"] p > span + br,
 [epub|type~="z3998:verse"] p > span + br{
 	display: none;
 }
 
+[epub|type~="z3998:song"] p + p,
 [epub|type~="z3998:verse"] p + p{
 	margin-top: 1em;
 }
@@ -121,7 +125,7 @@ p span.i2{
 	padding-left: 3em;
 	text-indent: -1em;
 }
-/* End verse */
+/* End song, verse */
 
 /* Numbered list */
 header{
